k8s/redis/service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: streaming-platform
  labels:
    app: redis
    component: cache
spec:
  selector:
    app: redis
    #Add Port Info
  type: ClusterIP
